--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
 
 <body>
-  <div class="row large-uncollapse">
-    <div class="card small-12 columns">
-      <div class="row">
+  <div class="large-uncollapse">
+    <div class="small-12 columns">
+      <div class="card row">
         <div class="small-12 columns">
           <h1>Alex Bowers Schoen</h1>
         </div>
@@ -25,73 +25,50 @@
     </div>
   </div>
 
-  <div class="large-uncollapse row ">
-    <div class="card tile small-12 medium-3 columns">
-      <div class="row">
+  <div class="large-uncollapse">
+    <div class="small-12 medium-6 columns">
+      <div class="card row">
         <div class="small-12 columns">
-          <h2>Here's another card</h2>
+          <h2>Resume</h2>
         </div>
         <div class="small-12 columns">
           I could put lots of things in here, like pictures from grad school that are brief things, or I could make tiles of cards with links to those things up above, instead of a small menu. 
           <br>
           I'm mostly filling this out right now to take up some space. Wooo, space!
           <br>
-          Here's a link to my resume
-          <hr>
-          <a href="resume">Resume</a>
-        </div>
-      </div>
-    </div>
-    <div class="card tile small-12 medium-5 medium-offset-2 large-3 large-offset-1 columns">
-      <div class="row">
-        <div class="small-12 columns">
-          <h2>Here's another card</h2>
-        </div>
-        <div class="small-12 columns">
-          I could put lots of things in here, like pictures from grad school that are brief things, or I could make tiles of cards with links to those things up above, instead of a small menu. 
-          <br>
-          I'm mostly filling this out right now to take up some space. Wooo, space!
-          <br>
-          Here's a link to my the grad school examples. I'll probably piece them out a little and make these a main source of tiles on this top page.
-          <hr>
-          <a href="graduate">Graduate School Examples</a>
+          Here's a link to my <a href="resume">Resume</a>
         </div>
       </div>
     </div>
 
-    <div class="card tile small-12 medium-5 large-3 large-offset-1 columns">
-      <div class="row">
+    <div class="small-12 medium-6 columns">
+      <div class="card row">
         <div class="small-12 columns">
-          <h2>Here's another card</h2>
+          <h2>Graduate School Classwork</h2>
         </div>
         <div class="small-12 columns">
-          I could put lots of things in here, like pictures from grad school that are brief things, or I could make tiles of cards with links to those things up above, instead of a small menu. 
-          <br>
-          I'm mostly filling this out right now to take up some space. Wooo, space!
-          <br>
-          Here's a link to my the grad school examples. I'll probably piece them out a little and make these a main source of tiles on this top page.
-          <hr>
-          <a href="graduate/">Graduate School Examples</a>
+          I'm working on my Master's degree through Georgia Tech's Online Master's in Computer Science Program. The classes I have taken so far are:
+
+          <ul>
+            <li>
+              <a href="graduate/sdp.html">Software Development Process</a>
+            </li>
+            <li>
+              <a href="graduate/kbai.html">Knowledge-Based Artificial Intelligence: Cognitive Systems</a>
+            </li>
+            <li>
+              <a href="graduate/compphotog.html">Computational Photography</a>
+            </li>
+            <li>
+              <a href="graduate/computervision.html">Computer Vision</a>
+            </li>
+            <li>
+              <a href="graduate/hci.html">Human-Computer Interaction</a>
+            </li>
         </div>
       </div>
     </div>
 
-    <div class="card tile small-12 medium-5 medium-offset-2 large-3 large-offset-0 end columns">
-      <div class="row">
-        <div class="small-12 columns">
-          <h2>Here's another card</h2>
-        </div>
-        <div class="small-12 columns">
-          I could put lots of things in here, like pictures from grad school that are brief things, or I could make tiles of cards with links to those things up above, instead of a small menu. 
-          <br>
-          I'm mostly filling this out right now to take up some space. Wooo, space!
-          <br>
-          Here's a link to my resume
-          <hr>
-          <a href="resume">Resume</a>
-        </div>
-      </div>
-    </div>
   </div>
 </body>
 </html>
