--- a/graduate/hci.html
+++ b/graduate/hci.html
@@ -15,12 +15,12 @@
   <div class="large-uncollapse">
     <div class="small-12 columns">
       <div class="card row">
-        <div class="small-12">
-          <h1>Alex Bowers Schoen</h1>
+        <div class="small-12 columns">
+          <h1>Human-Computer Interaction</h1>
         </div>
         <div class="horiz-items small-12 columns">
-          <span><a href="resume/index.html">Example 1</a></span>
-          <span><a href="graduate/index.html">Example 2</a></span>
+          <span>Fall 2016</span>
+          <span><a href="http://omscs.gatech.edu/cs-6750-human-computer-interaction">Class Website</a></span>
         </div>
       </div>
     </div>
