--- a/graduate/kbai.html
+++ b/graduate/kbai.html
@@ -15,12 +15,13 @@
   <div class="large-uncollapse">
     <div class="small-12 columns">
       <div class="card row">
-        <div class="small-12">
-          <h1>Alex Bowers Schoen</h1>
+        <div class="small-12 columns">
+          <h1>Knowledge-Based Artificial Intelligence: Cognitive Systems</h1>
         </div>
         <div class="horiz-items small-12 columns">
-          <span><a href="resume/index.html">Example 1</a></span>
-          <span><a href="graduate/index.html">Example 2</a></span>
+          <span>Spring 2015</span>
+          <span><a href="http://www.omscs.gatech.edu/cs-7637-knowledge-based-artificial-intelligence-cognitive-systems">Class Website</a></span>
+          <span>Primary Language: Java</span>
         </div>
       </div>
     </div>
