--- a/graduate/computervision.html
+++ b/graduate/computervision.html
@@ -26,5 +26,18 @@
       </div>
     </div>
   </div>
+
+  <div class="large-uncollapse">
+    <div class="small-12 columns">
+      <div class="card row">
+        <div class="small-12 columns">
+          <h2>Main Points</h2>
+        </div>
+        <div class="small-12 columns">
+          This class went into the math behind the techniques we used in Computer Vision. Things like line and circle finding using Hough Transforms, 
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
