--- a/graduate/kbai.html
+++ b/graduate/kbai.html
@@ -26,5 +26,18 @@
       </div>
     </div>
   </div>
+
+  <div class="large-uncollapse">
+    <div class="small-12 columns">
+      <div class="card row">
+        <div class="small-12 columns">
+          <h2>Main Points</h2>
+        </div>
+        <div class="small-12 columns">
+          In this class, we had a semester-long project of creating an AI that could solve Raven’s Progressive Matrices. 
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
