--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h2>Graduate School Classwork</h2>
         </div>
         <div class="small-12 columns">
-          I'm working on my Master's degree through Georgia Tech's Online Master's in Computer Science Program. The classes I have taken so far are:
+          I'm working on my Master's degree through Georgia Tech's Online Master's in Computer Science Program, currently maintaining a 4.0 gpa. The classes I have taken so far are:
 
           <ul>
             <li>
