--- a/graduate/hci.html
+++ b/graduate/hci.html
@@ -25,5 +25,18 @@
       </div>
     </div>
   </div>
+
+  <div class="large-uncollapse">
+    <div class="small-12 columns">
+      <div class="card row">
+        <div class="small-12 columns">
+          <h2>Main Points</h2>
+        </div>
+        <div class="small-12 columns">
+          I'm currently taking this class, and we haven't started any projects/assignments yet.  
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
