--- a/graduate/sdp.html
+++ b/graduate/sdp.html
@@ -26,5 +26,18 @@
       </div>
     </div>
   </div>
+  
+  <div class="large-uncollapse">
+    <div class="small-12 columns">
+      <div class="card row">
+        <div class="small-12 columns">
+          <h2>Main Points</h2>
+        </div>
+        <div class="small-12 columns">
+          Team Project - Documentation - following the workflow of a waterfall development process through the full semester to build an ice cream ordering system, including requirements, flow designs, test-driven development, deliveryve Raven’s Progressive Matrices. 
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
