--- a/graduate/computervision.html
+++ b/graduate/computervision.html
@@ -34,7 +34,7 @@
           <h2>Main Points</h2>
         </div>
         <div class="small-12 columns">
-          This class went into the math behind the techniques we used in Computer Vision. Things like line and circle finding using Hough Transforms, 
+          This class went into the math behind the techniques we used in Computer Vision. Things like line and circle finding using Hough Transforms, window-based particle tracking, motion image visiualization and action recognition, image warping and panorama creation using Harris corners, and stereo vision. 
         </div>
       </div>
     </div>
