--- a/graduate/sdp.html
+++ b/graduate/sdp.html
@@ -34,7 +34,7 @@
           <h2>Main Points</h2>
         </div>
         <div class="small-12 columns">
-          Team Project - Documentation - following the workflow of a waterfall development process through the full semester to build an ice cream ordering system, including requirements, flow designs, test-driven development, deliveryve Raven’s Progressive Matrices. 
+          Team Project - Documentation - following the workflow of a waterfall development process through the full semester to build an ice cream ordering system, including requirements, flow designs, test-driven development, delivery, test plans. Explored several different development processes. 
         </div>
       </div>
     </div>
