--- a/graduate/compphotog.html
+++ b/graduate/compphotog.html
@@ -34,7 +34,7 @@
           <h2>Main Points</h2>
         </div>
         <div class="small-12 columns">
-          Things about this class that we did. This will have many pictures of things like pyramid blending, composite photography, pinhole photography, writing code to create hdr phographs, writing code to create panoramic photographs, blending, matching key points between photographs...
+          Things about this class that we did. This will have many pictures of things like pyramid blending, composite photography, pinhole photography, writing code to create hdr phographs, writing code to create panoramic photographs, blending, matching key points between photographs.
         </div>
       </div>
     </div>
