--- a/resume/index.html
+++ b/resume/index.html
@@ -75,14 +75,13 @@
           <div class="job-details small-12 columns">
             <div><b>Things that I did - still working on this</b></div>
             <ul>
-              <li>Led the team of Engineers to do a whole lot of things</li>
-              <li>JDP Conversion</li>
-              <li>JRP Conversion</li>
+              <li>Led a team of 3 Engineers to do a whole lot of things</li>
+              <li>Managed the conversion of two of our three most-hit pages (Job Results and Job Details) from our legacy system to the new Ruby on Rails platform. Most notably, continued the SEO work that I had started previously, so we had no drop in indexing from major search engines, and also no major outages as a result of the conversion.</li>
               <li>Updating old JRP</li>
               <li>Led team for a year before getting title</li>
-              <li>Meeting with Product Owners (including Chief Product Owner) to determine feasibility and scope of work</li>
+              <li>Meet with Product Owners (including Chief Product Owner) to determine feasibility and scope of work</li>
               <li>Working with developers to break down work in to manageable, devliverable, iterable chunks of work</li>
-              <li>Checking user reports, GTM numbers, to determine next projects, to find bugs, etc... (reading between the lines to determine pain points)</li>
+              <li>Checking user reports (Usabilla), GTM numbers, to determine next projects, to find bugs, etc... (reading between the lines to determine pain points)</li>
               <li></li>
               <li>On the SEO Team</li>
               <li>Only developer, grew the team of developers</li>
