--- a/resume/index.html
+++ b/resume/index.html
@@ -138,6 +138,9 @@
             <div class="small-12 medium-6 large-2 columns">Atlanta, GA</div>
             <div class="dates small-12 medium-6 large-4 columns"><i>2014-2018 (Estimated Graduation)</i></div>
             <div class="degree small-12 columns">Master's in Computer Science</div>
+            <div class="small-12 columns horiz-items">
+              <span class="contact-info"><a href="http://www.news.gatech.edu/features/so-how-about-online-computer-science-degree">So How About That Online Computer Science Degree</a></span>
+            </div>
           </div>
 
           <hr>
