--- a/resume/index.html
+++ b/resume/index.html
@@ -79,7 +79,7 @@
               <li>Managed the conversion of two of our three most-hit pages (Job Results and Job Details) from our legacy system to the new Ruby on Rails platform. Most notably, continued the SEO work that I had started previously, so we had no drop in indexing from major search engines, and also no major outages as a result of the conversion.</li>
               <li>Before conversion of the pages, worked to put the previous Job Results page into a sustain mode, overhauling the look, feel, and structure of the page to bring it up to a more modern, readable, and usable state</li>
               <li>Led team for a year before getting title</li>
-              <li>Meet with Product Owners (including Chief Product Owner) to determine feasibility and scope of work</li>
+              <li>Meet with Product Owners (including Chief Product Officer) to determine feasibility and scope of work</li>
               <li>Working with developers to break down work in to manageable, devliverable, iterable chunks of work</li>
               <li>Checking user reports (Usabilla), GTM numbers, to determine next projects, to find bugs, etc... (reading between the lines to determine pain points)</li>
               <li>On the SEO Team</li>
