--- a/resume/index.html
+++ b/resume/index.html
@@ -103,11 +103,16 @@
               <li></li>
             </ul>
           </div>
+        </div>
+      </div>
 
-          <hr>
+      <div class="card small-12 columns">
+        <div class="education row">
+          <div class="small-12 columns">
+            <h2>Achievements</h2>
+          </div>
 
           <div class="job-details small-12 columns">
-            <div><b>Awards (Do I need this section?)</b></div>
             <ul>
               <li>Won several company-sponsored Hackathons</li>
               <ul>
