--- a/resume/index.html
+++ b/resume/index.html
@@ -91,6 +91,7 @@
                 </ul>
               <li>Generally:</li>
               <ul>
+                <li>Languages: Ruby on Rails, .net</li>
                 <li>Used GitHub</li>
                 <li>Code Reviews</li>
                 <li>CodeClimate</li>
