--- a/resume/index.html
+++ b/resume/index.html
@@ -92,11 +92,9 @@
               <li>Generally:</li>
               <ul>
                 <li>Languages: Ruby on Rails, .net</li>
-                <li>Used GitHub</li>
-                <li>Code Reviews</li>
-                <li>CodeClimate</li>
-                <li>NewRelic</li>
-                <li>SASS, CoffeeScript, or HAML</li>
+                <li>SASS, CoffeeScript, HAML</li>
+                <li>Tools: GitHub, CodeClimate, NewRelic, Mingle</li>
+                <li>Processes: Code Reviews, Scrum, Agile (with many ceremonies)</li>
                 <li>Switching from .net to Ruby on Rails platform</li>
                 <li>Created tools for developers to use (one-button deploy to production, internal deploy to shared staging environments, simple viewing of just our Usabilla comments, the addition of cat pictures interspersed within Usabilla comment viewing to ease the pain of reading user comments...)</li>
                 <li></li>
