reminder to get numbers

--- a/resume/index.html
+++ b/resume/index.html
@@ -88,6 +88,7 @@
                   <li>Part of major decisions, like url structure</li>
                   <li>Got us to the first page of Google with changes- adding canonical urls, correcting redirect codes, enforcing a url standard, appropriately adding status codes to pages, adding expired tags to pages, adding microdata</li>
                   <li>Hired, mentored seasonal intern</li>
+                  <li>[Get the numbers, because those are pretty cool.]</li>
                 </ul>
               <li>Generally:</li>
               <ul>
