--- a/resume/index.html
+++ b/resume/index.html
@@ -112,17 +112,18 @@
 
           <div class="job-details small-12 columns">
             <ul>
-              <li>Won several company-sponsored Hackathons</li>
+              <li>Won several internal CareerBuilder Hackathons</li>
               <ul>
-                <li>The project that gave people without expensive licenses the ability to read Mingle cards</li>
-                <li>Printable posters for physical job boards that gave users a QR-apply method (instead of having to write everything down and apply to jobs later)</li>
+                <li>A project that gave people the ability to read Mingle cards, without expensive licenses or needing to have project access</li>
+                <li>Printable posters for physical job boards that gave users a QR-apply method (instead of having to write everything down and apply to jobs later, or take easy-to-lose tear slips)</li>
                 <li>Local search (maps on the job results page!)</li>
                 <li>A tool that gives us visibility into relevancy improvements, to compare against the current results, and a second project that actually made relevancy improvements (2 projects won at the same event)</li>
               </ul>
               <li>2015 Diamond Club winner - the highest award that CareerBuilder gives</li>
-              <li>Mentored girls in our High School Intern program</li>
-              <li>Organized World Cup viewing meetings.</li>
-              <li>Speaker at <a href="https://www.alterconf.com/speakers/alexandra-bowers-schoen">Atlanta AlterConf 2015</a> (shouldn't go in this section, move it)</li>
+              <li>Speaker at an internal CareerBuilder Topic of Interest program on the technical aspects of the SEO improvements</li>
+              <li>Mentored girls in CareerBuilder's High School Intern program</li>
+              <li>Organized World Cup viewing meetings</li>
+              <li>Speaker at <a href="https://www.alterconf.com/speakers/alexandra-bowers-schoen">Atlanta AlterConf 2015</a></li>
             </ul>
 
           </div>
