--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           <h1>Alex Bowers Schoen</h1>
         </div>
         <div class="horiz-items small-12 columns">
-          <span><a href="resume">Resume</a></span>
-          <span><a href="graduate">Graduate School Examples</a></span>
+          <span><a href="resume" title="Resume">Resume</a></span>
+          <span><a href="graduate" title="Graduate School">Graduate School Examples</a></span>
         </div>
       </div>
     </div>
@@ -32,11 +32,9 @@
           <h2>Resume</h2>
         </div>
         <div class="small-12 columns">
-          I could put lots of things in here, like pictures from grad school that are brief things, or I could make tiles of cards with links to those things up above, instead of a small menu. 
-          <br>
-          I'm mostly filling this out right now to take up some space. Wooo, space!
-          <br>
-          Here's a link to my <a href="resume">Resume</a>
+          I am a Software Engineer with over 10 years of experience in a range of technologies, from ColdFusion to Java to Ruby on Rails, looking for an energetic, but flexible, work environment.  
+          <hr>
+          <a href="resume">Resume</a>
         </div>
       </div>
     </div>
@@ -47,7 +45,7 @@
           <h2>Graduate School Classwork</h2>
         </div>
         <div class="small-12 columns">
-          I'm working on my Master's degree through Georgia Tech's Online Master's in Computer Science Program, currently maintaining a 4.0 gpa. The classes I have taken so far are:
+          I'm working on my Master's degree through Georgia Tech's Online Master's in Computer Science Program, currently maintaining a 4.0 gpa and specializing in <a href="https://www.omscs.gatech.edu/specialization-interactive-intelligence" title="OMSCS Interactive Intelligence Specialization">Interactive Intelligence</a>. Classes I have taken so far:
 
           <ul>
             <li>
