--- a/resume/index.html
+++ b/resume/index.html
@@ -73,16 +73,15 @@
           </div>
 
           <div class="job-details small-12 columns">
-            <div><b>Things that I did - still working on this</b></div>
             <ul>
-              <li>Led a team of 3 Engineers to do a whole lot of things</li>
-              <li>Managed the conversion of two of our three most-hit pages (Job Results and Job Details) from our legacy system to the new Ruby on Rails platform. Most notably, continued the SEO work that I had started previously, so we had no drop in indexing from major search engines, and also no major outages as a result of the conversion.</li>
+              <li>Led and managed a team of 2-3 Engineers</li>
+              <li>Managed the conversion of two of our three most-hit pages (Job Results and Job Details) from our legacy system to the new Ruby on Rails platform. Most notably, continued the SEO work that I had started previously, and made a detailed conversion plan, so we had no drop in indexing from major search engines, and also no major outages as a result of the conversion.</li>
               <li>Before conversion of the pages, worked to put the previous Job Results page into a sustain mode, overhauling the look, feel, and structure of the page to bring it up to a more modern, readable, and usable state</li>
               <li>Led team for a year before getting title</li>
               <li>Meet with Product Owners (including Chief Product Officer) to determine feasibility and scope of work</li>
-              <li>Working with developers to break down work in to manageable, devliverable, iterable chunks of work</li>
+              <li>Working with developers to break down projects in to manageable, devliverable, iterable chunks of work</li>
               <li>Checking user reports (Usabilla), GTM numbers, to determine next projects, to find bugs, etc... (reading between the lines to determine pain points)</li>
-              <li>On the SEO Team</li>
+              <li>On the SEO Team:</li>
                 <ul>
                   <li>Only developer, grew the team of developers</li>
                   <li>Part of major decisions, like url structure</li>
@@ -143,6 +142,7 @@
             <div class="small-12 medium-6 large-2 columns">Atlanta, GA</div>
             <div class="dates small-12 medium-6 large-4 columns"><i>2014-2018 (Anticipated Graduation)</i></div>
             <div class="degree small-12 columns">Master's in Computer Science</div>
+            <div class="degree small-12 columns">Interactive Intelligence Specialization</div>
             <div class="small-12 columns horiz-items">
               <span class="contact-info"><a href="http://www.news.gatech.edu/features/so-how-about-online-computer-science-degree">So How About That Online Computer Science Degree</a></span>
             </div>
