--- a/resume/index.html
+++ b/resume/index.html
@@ -18,9 +18,9 @@
   <body>
     <div class="resume row">
       <div class="card small-12 columns">
-        <header class="basic-info row">
+        <header class="basic-info row" itemscope itemtype="http://schema.org/Person">
           <div class="small-12 large-6 columns">
-            <h1><span>Alex Bowers Schoen</span></h1>
+            <h1><span itemprop="name">Alex Bowers Schoen</span></h1>
           </div>
            <div class="horiz-items text-bottom small-12 large-6 columns">
             <span class="contact-info">Decatur, GA</span>
@@ -34,19 +34,19 @@
       </div>
 
       <div class="card small-12 columns">
-        <div class="experience row">
+        <div class="experience row" itemscope itemtype="http://schema.org/Organization">
           <div class="small-12 columns">
             <h2>Current Experience</h2>
           </div>
           <div class="job">
             <div class="job-overview">
               <div class="employer-info small-12 large-6 columns">
-                <h3><span>CareerBuilder</span></h3>
+                <h3><span itemprop="name">CareerBuilder</span></h3>
               </div>
               <div class="location small-12 medium-6 large-2 columns">Norcross, GA</div>
               <div class="dates small-12 medium-6 large-4 columns"><i>December 2013 - present</i></div>
               <div class="small-12 columns">
-                <h4 class="job-title">Engineering Lead in Consumer Web Development</h4>
+                <h4 class="job-title" itemprop="jobTitle">Engineering Lead in Consumer Web Development</h4>
               </div>
 
               <section class="previous-titles">
@@ -55,13 +55,13 @@
                   <ul>
                     <li>
                       <span class="horiz-items">
-                        <span>Software Engineer III</span>
+                        <span itemprop="jobTitle">Software Engineer III</span>
                         <span>May 2015 - Dec 2015</span>
                       </span>
                     </li>
                     <li>
                       <span class="horiz-items">
-                        <span>Software Engineer II</span>
+                        <span itemprop="jobTitle">Software Engineer II</span>
                         <span>Dec 2013 - May 2014</span>
                       </span>
                     </li>
@@ -72,7 +72,7 @@
             </div>  
           </div>
 
-          <div class="job-details small-12 columns">
+          <div class="job-details small-12 columns" itemprop="description">
             <ul>
               <li>Led and managed a team of 2-3 Engineers</li>
               <li>Managed the conversion of two of our three most-hit pages (Job Results and Job Details) from our legacy system to the new Ruby on Rails platform. Most notably, continued the SEO work that I had started previously, and made a detailed conversion plan, so we had no drop in indexing from major search engines, and also no major outages as a result of the conversion.</li>
