--- a/resume/index.html
+++ b/resume/index.html
@@ -16,9 +16,9 @@
   </head>
 
   <body>
-    <div class="resume row">
+    <div class="resume row" itemscope itemtype="http://schema.org/Person">
       <div class="card small-12 columns">
-        <header class="basic-info row" itemscope itemtype="http://schema.org/Person">
+        <header class="basic-info row">
           <div class="small-12 large-6 columns">
             <h1><span itemprop="name">Alex Bowers Schoen</span></h1>
           </div>
@@ -43,7 +43,7 @@
               <div class="employer-info small-12 large-6 columns">
                 <h3><span itemprop="name">CareerBuilder</span></h3>
               </div>
-              <div class="location small-12 medium-6 large-2 columns">Norcross, GA</div>
+              <div class="location small-12 medium-6 large-2 columns" itemprop="location">Norcross, GA</div>
               <div class="dates small-12 medium-6 large-4 columns"><i>December 2013 - present</i></div>
               <div class="small-12 columns">
                 <h4 class="job-title" itemprop="jobTitle">Engineering Lead in Consumer Web Development</h4>
