--- a/resume/index.html
+++ b/resume/index.html
@@ -33,7 +33,7 @@
         </header>
       </div>
 
-      <div class="card small-12 columns">
+      <div class="card small-12 columns" itemprop="employee">
         <div class="experience row" itemscope itemtype="http://schema.org/Organization">
           <div class="small-12 columns">
             <h2>Current Experience</h2>
@@ -129,7 +129,7 @@
         </div>
       </div>
 
-      <div class="card small-12 columns">
+      <div class="card small-12 columns" itemscope itemtype="http://schema.org/EducationalOrganization">
         <div class="education row">
           <div class="small-12 columns">
             <h2>Education</h2>
@@ -137,9 +137,9 @@
 
           <div class="school">
             <div class="small-12 large-6 columns">
-              <h3><span>Georgia Institute of Technology</span></h3>
+              <h3><span itemprop="name">Georgia Institute of Technology</span></h3>
             </div>
-            <div class="small-12 medium-6 large-2 columns">Atlanta, GA</div>
+            <div class="small-12 medium-6 large-2 columns" itemprop="location">Atlanta, GA</div>
             <div class="dates small-12 medium-6 large-4 columns"><i>2014-2018 (Anticipated Graduation)</i></div>
             <div class="degree small-12 columns">Master's in Computer Science</div>
             <div class="degree small-12 columns">Interactive Intelligence Specialization</div>
@@ -152,9 +152,9 @@
           
           <div class="school">
             <div class="small-12 large-6 columns">
-              <h3><span>Rose-Hulman Institute of Technology</span></h3>
+              <h3><span itemprop="name">Rose-Hulman Institute of Technology</span></h3>
             </div>
-            <div class="small-12 medium-6 large-2 columns">Terre Haute, IN</div>
+            <div class="small-12 medium-6 large-2 columns" itemprop="location">Terre Haute, IN</div>
             <div class="dates small-12 medium-6 large-4 columns"><i>1999-2003</i></div>
             <div class="degree small-12 columns">B.S. Computer Science and Software Engineering</div>
             <div class="degree small-12 columns">Minor in Japanese Language</div>
