--- a/resume/index.html
+++ b/resume/index.html
@@ -23,9 +23,9 @@
             <h1><span itemprop="name">Alex Bowers Schoen</span></h1>
           </div>
            <div class="horiz-items text-bottom small-12 large-6 columns">
-            <span class="contact-info">Decatur, GA</span>
-            <span class="contact-info"><a href="https://twitter.com/Palila">@Palila</a></span>
-            <span class="contact-info"><a href="http://github.com/bowersaa">GitHub</a></span>
+            <span class="contact-info" itemprop="address">Decatur, GA</span>
+            <span class="contact-info" itemprop="url"><a href="https://twitter.com/Palila">@Palila</a></span>
+            <span class="contact-info" itemprop="url"><a href="http://github.com/bowersaa">GitHub</a></span>
           </div>
           
           <div class="job-title small-12 columns">Software Engineer with over 10 years of experience in a range of technologies</div>
@@ -33,7 +33,7 @@
         </header>
       </div>
 
-      <div class="card small-12 columns" itemprop="employee">
+      <div class="card small-12 columns" itemprop="worksFor">
         <div class="experience row" itemscope itemtype="http://schema.org/Organization">
           <div class="small-12 columns">
             <h2>Current Experience</h2>
@@ -55,13 +55,13 @@
                   <ul>
                     <li>
                       <span class="horiz-items">
-                        <span itemprop="jobTitle">Software Engineer III</span>
+                        <span>Software Engineer III</span>
                         <span>May 2015 - Dec 2015</span>
                       </span>
                     </li>
                     <li>
                       <span class="horiz-items">
-                        <span itemprop="jobTitle">Software Engineer II</span>
+                        <span>Software Engineer II</span>
                         <span>Dec 2013 - May 2014</span>
                       </span>
                     </li>
@@ -139,7 +139,7 @@
             <div class="small-12 large-6 columns">
               <h3><span itemprop="name">Georgia Institute of Technology</span></h3>
             </div>
-            <div class="small-12 medium-6 large-2 columns" itemprop="location">Atlanta, GA</div>
+            <div class="small-12 medium-6 large-2 columns" itemprop="address">Atlanta, GA</div>
             <div class="dates small-12 medium-6 large-4 columns"><i>2014-2018 (Anticipated Graduation)</i></div>
             <div class="degree small-12 columns">Master's in Computer Science</div>
             <div class="degree small-12 columns">Interactive Intelligence Specialization</div>
@@ -154,7 +154,7 @@
             <div class="small-12 large-6 columns">
               <h3><span itemprop="name">Rose-Hulman Institute of Technology</span></h3>
             </div>
-            <div class="small-12 medium-6 large-2 columns" itemprop="location">Terre Haute, IN</div>
+            <div class="small-12 medium-6 large-2 columns" itemprop="address">Terre Haute, IN</div>
             <div class="dates small-12 medium-6 large-4 columns"><i>1999-2003</i></div>
             <div class="degree small-12 columns">B.S. Computer Science and Software Engineering</div>
             <div class="degree small-12 columns">Minor in Japanese Language</div>
