--- a/resume/index.html
+++ b/resume/index.html
@@ -43,9 +43,9 @@
               <div class="employer-info small-12 large-6 columns">
                 <h3><span itemprop="name">CareerBuilder</span></h3>
               </div>
-              <div class="location small-12 medium-6 large-2 columns" itemprop="location">Norcross, GA</div>
+              <div class="location small-12 medium-6 large-2 columns" itemprop="address">Norcross, GA</div>
               <div class="dates small-12 medium-6 large-4 columns"><i>December 2013 - present</i></div>
-              <div class="small-12 columns">
+              <div class="small-12 columns" itemscope itemtype="http://schema.org/Role">
                 <h4 class="job-title" itemprop="jobTitle">Engineering Lead in Consumer Web Development</h4>
               </div>
 
@@ -129,13 +129,13 @@
         </div>
       </div>
 
-      <div class="card small-12 columns" itemscope itemtype="http://schema.org/EducationalOrganization">
+      <div class="card small-12 columns">
         <div class="education row">
           <div class="small-12 columns">
             <h2>Education</h2>
           </div>
 
-          <div class="school">
+          <div class="school" itemscope itemtype="http://schema.org/EducationalOrganization">
             <div class="small-12 large-6 columns">
               <h3><span itemprop="name">Georgia Institute of Technology</span></h3>
             </div>
@@ -150,7 +150,7 @@
 
           <hr>
           
-          <div class="school">
+          <div class="school" itemscope itemtype="http://schema.org/EducationalOrganization">
             <div class="small-12 large-6 columns">
               <h3><span itemprop="name">Rose-Hulman Institute of Technology</span></h3>
             </div>
