--- a/resume/index.html
+++ b/resume/index.html
@@ -24,11 +24,11 @@
           </div>
            <div class="horiz-items text-bottom small-12 large-6 columns">
             <span class="contact-info" itemprop="address">Decatur, GA</span>
-            <span class="contact-info" itemprop="url"><a href="https://twitter.com/Palila">@Palila</a></span>
-            <span class="contact-info" itemprop="url"><a href="http://github.com/bowersaa">GitHub</a></span>
+            <span class="contact-info" rel="me" itemprop="url"><a href="https://twitter.com/Palila">@Palila</a></span>
+            <span class="contact-info" rel="me" itemprop="url"><a href="http://github.com/bowersaa">GitHub</a></span>
           </div>
           
-          <div class="job-title small-12 columns">Software Engineer with over 10 years of experience in a range of technologies</div>
+          <div class="job-title small-12 columns" itemprop="description">Software Engineer with over 10 years of experience in a range of technologies</div>
          
         </header>
       </div>
@@ -46,7 +46,7 @@
               <div class="location small-12 medium-6 large-2 columns" itemprop="address">Norcross, GA</div>
               <div class="dates small-12 medium-6 large-4 columns"><i>December 2013 - present</i></div>
               <div class="small-12 columns" itemscope itemtype="http://schema.org/Role">
-                <h4 class="job-title" itemprop="jobTitle">Engineering Lead in Consumer Web Development</h4>
+                <h4 class="job-title" itemprop="roleName">Engineering Lead in Consumer Web Development</h4>
               </div>
 
               <section class="previous-titles">
