--- a/resume/index.html
+++ b/resume/index.html
@@ -74,30 +74,36 @@
 
           <div class="job-details small-12 columns" itemprop="description">
             <ul>
-              <li>Led and managed a team of 2-3 Engineers</li>
-              <li>Managed the conversion of two of our three most-hit pages (Job Results and Job Details) from our legacy system to the new Ruby on Rails platform. Most notably, continued the SEO work that I had started previously, and made a detailed conversion plan, so we had no drop in indexing from major search engines, and also no major outages as a result of the conversion.</li>
-              <li>Before conversion of the pages, worked to put the previous Job Results page into a sustain mode, overhauling the look, feel, and structure of the page to bring it up to a more modern, readable, and usable state</li>
-              <li>Led team for a year before getting title</li>
-              <li>Meet with Product Owners (including Chief Product Officer) to determine feasibility and scope of work</li>
-              <li>Working with developers to break down projects in to manageable, devliverable, iterable chunks of work</li>
-              <li>Checking user reports (Usabilla), GTM numbers, to determine next projects, to find bugs, etc... (reading between the lines to determine pain points)</li>
+              <li>Projects:</li>
+                <ul>
+                  <li>Managed the conversion of two of our three most-hit pages (Job Results and Job Details) from our legacy system to the new Ruby on Rails platform. Most notably, continued the SEO work that I had started previously, and made a detailed conversion plan, so we had no drop in indexing from major search engines, and also no major outages as a result of the conversion.</li>
+                  <li>Before conversion of the pages, worked to put the previous Job Results page into a sustain mode, overhauling the look, feel, and structure of the page to bring it up to a more modern, readable, and usable state</li>
+                </ul>
+              <li>As an Engineering Lead:</li>
+                <ul>
+                  <li>Led a team of 2-3 Engineers</li>
+                  <li>Led team for a year before getting title</li>
+                  <li>Meet with Product Owners (including Chief Product Officer) to determine feasibility and scope of work</li>
+                  <li>Working with developers to break down projects in to manageable, devliverable, iterable chunks of work</li>
+                  <li>Checking user reports (Usabilla), GTM numbers, to determine next projects, to find bugs, etc... (reading between the lines to determine pain points)</li>
+                </ul>
               <li>On the SEO Team:</li>
                 <ul>
-                  <li>Only developer, grew the team of developers</li>
-                  <li>Part of major decisions, like url structure</li>
-                  <li>Got us to the first page of Google with changes- adding canonical urls, correcting redirect codes, enforcing a url standard, appropriately adding status codes to pages, adding expired tags to pages, adding microdata</li>
+                  <li>Started as the only developer with this team, and grew the team of developers</li>
+                  <li>Architected the new url structure for the new platform</li>
+                  <li>Elevated CareerBuilder to the first page of Google results with changes- adding canonical urls, correcting redirect codes, enforcing a url standard, appropriately adding status codes to pages, adding expired tags to pages, adding microdata</li>
                   <li>Hired, mentored seasonal intern</li>
                   <li>[Get the numbers, because those are pretty cool.]</li>
                 </ul>
               <li>Generally:</li>
-              <ul>
-                <li>Languages: Ruby on Rails, .net</li>
-                <li>SASS, CoffeeScript, HAML</li>
-                <li>Tools: GitHub, CodeClimate, NewRelic, Mingle</li>
-                <li>Processes: Code Reviews, Scrum, Agile (with many ceremonies)</li>
-                <li>Switching from .net to Ruby on Rails platform</li>
-                <li>Created tools for developers to use (one-button deploy to production, internal deploy to shared staging environments, simple viewing of just our Usabilla comments, the addition of cat pictures interspersed within Usabilla comment viewing to ease the pain of reading user comments...)</li>
-              </ul>
+                <ul>
+                  <li>Languages: Ruby on Rails, .net</li>
+                  <li>SASS, CoffeeScript, HAML</li>
+                  <li>Tools: GitHub, CodeClimate, NewRelic, Mingle</li>
+                  <li>Processes: Code Reviews, Story Mapping, Scrum, Agile (with many ceremonies)</li>
+                  <li>Switching from .net to Ruby on Rails platform</li>
+                  <li>Created tools for developers to use (one-button deploy to production, internal deploy to shared staging environments, simple viewing of just our Usabilla comments, the addition of cat pictures interspersed within Usabilla comment viewing to ease the pain of reading user comments...)</li>
+                </ul>
             </ul>
           </div>
         </div>
@@ -144,7 +150,7 @@
             <div class="degree small-12 columns">Master's in Computer Science</div>
             <div class="degree small-12 columns">Interactive Intelligence Specialization</div>
             <div class="small-12 columns horiz-items">
-              <span class="contact-info"><a href="http://www.news.gatech.edu/features/so-how-about-online-computer-science-degree">So How About That Online Computer Science Degree</a></span>
+              <span><a href="http://www.news.gatech.edu/features/so-how-about-online-computer-science-degree">So How About That Online Computer Science Degree</a></span>
             </div>
           </div>
 
