--- a/resume/index.html
+++ b/resume/index.html
@@ -13,6 +13,7 @@
     <link href="../assets/css/global.css" rel="stylesheet" type="text/css">
     <link href="../assets/css/resume.css" rel="stylesheet" type="text/css">
     <link href="../assets/css/foundation.min.css" rel="stylesheet" type="text/css">
+    <link href="../assets/css/print.css" rel="stylesheet" media="print">
   </head>
 
   <body>
@@ -24,6 +25,7 @@
           </div>
            <div class="horiz-items text-bottom small-12 large-6 columns">
             <span class="contact-info" itemprop="address">Decatur, GA</span>
+            <span class="contact-info show-for-print" rel="me" itemprop="url"><a href="https://bowersaa.github.io/resume/">Full Resume</a></span>
             <span class="contact-info" rel="me" itemprop="url"><a href="https://twitter.com/Palila">@Palila</a></span>
             <span class="contact-info" rel="me" itemprop="url"><a href="http://github.com/bowersaa">GitHub</a></span>
           </div>
@@ -35,7 +37,7 @@
 
       <div class="card small-12 columns" itemprop="worksFor">
         <div class="experience row" itemscope itemtype="http://schema.org/Organization">
-          <div class="small-12 columns">
+          <div class="small-12 columns hide-for-print">
             <h2>Current Experience</h2>
           </div>
           <div class="job">
@@ -75,7 +77,7 @@
           <div class="job-details small-12 columns" itemprop="description">
             <div><b>Major projects:</b></div>
               <ul>
-                <li>Managed the conversion of two of our three most-hit pages (Job Results and Job Details) from our legacy system to the new Ruby on Rails platform. Most notably, continued the SEO work that I had started previously, and made a detailed conversion plan, so we had no drop in indexing from major search engines, and also no major outages as a result of the conversion.</li>
+                <li>Managed the conversion of two of our three top pages (Job Results and Job Details) from our legacy system to the new Ruby on Rails platform. Most notably, made a detailed conversion plan, so we had no drop in indexing from major search engines, and also no major outages as a result of the conversion.</li>
                 <li>Before conversion of the pages, worked to put the previous Job Results page into a sustain mode, overhauling the look, feel, and structure of the page to bring it up to a more modern, readable, and usable state</li>
               </ul>
             <div><b>On the SEO Team:</b></div>
@@ -108,7 +110,7 @@
         </div>
       </div>
 
-      <div class="card small-12 columns">
+      <div class="card small-12 columns hide-for-print">
         <div class="education row">
           <div class="small-12 columns">
             <h2>Achievements</h2>
@@ -148,7 +150,7 @@
             <div class="dates small-12 medium-6 large-4 columns"><i>2014-2018 (Anticipated Graduation)</i></div>
             <div class="degree small-12 columns">Master's in Computer Science</div>
             <div class="degree small-12 columns">Interactive Intelligence Specialization</div>
-            <div class="small-12 columns horiz-items">
+            <div class="small-12 columns horiz-items hide-for-print">
               <span><a href="http://www.news.gatech.edu/features/so-how-about-online-computer-science-degree">So How About That Online Computer Science Degree</a></span>
             </div>
           </div>
