--- a/resume/index.html
+++ b/resume/index.html
@@ -25,13 +25,12 @@
           </div>
            <div class="horiz-items text-bottom small-12 large-6 columns">
             <span class="contact-info" itemprop="address">Decatur, GA</span>
-            <span class="contact-info show-for-print" rel="me" itemprop="url"><a href="https://bowersaa.github.io/resume/">Full Resume</a></span>
-            <span class="contact-info" rel="me" itemprop="url"><a href="https://twitter.com/Palila">@Palila</a></span>
-            <span class="contact-info" rel="me" itemprop="url"><a href="http://github.com/bowersaa">GitHub</a></span>
+            <span class="contact-info show-for-print"><a href="https://bowersaa.github.io/resume/">Resume</a></span>
+            <span class="contact-info hide-for-print" title="@palila on Twitter" rel="me" itemprop="url"><a href="https://twitter.com/Palila">@Palila</a></span>
+            <span class="contact-info hide-for-print" title="bowersaa on GitHub" rel="me" itemprop="url"><a href="http://github.com/bowersaa">GitHub</a></span>
           </div>
           
           <div class="job-title small-12 columns" itemprop="description">Software Engineer with over 10 years of experience in a range of technologies</div>
-         
         </header>
       </div>
 
@@ -85,7 +84,7 @@
                 <li>Started as the only developer with this team, and grew the team of developers</li>
                 <li>Architected the new url structure for the new platform</li>
                 <li>Elevated CareerBuilder to the first page of Google results with changes- adding canonical urls, correcting redirect codes, enforcing a url standard, appropriately adding status codes to pages, adding expired tags to pages, adding microdata</li>
-                <li>Hired, mentored seasonal intern</li>
+                <li>Hired and mentored a seasonal intern</li>
                 <li>[Get the numbers, because those are pretty cool.]</li>
               </ul>
             <div><b>Engineering Lead:</b></div>
